--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 spring:
   application:
     name: t1-homeworks
+    metrics:
+      time-limit-ms: 5
   flyway:
     baseline-on-migrate: true
     baseline-version: 0
