--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,12 +5,17 @@ spring:
       time-limit-ms: 5
     cache:
       timeout-sec: 10
+    kafka:
+      metrics-topic: t1_demo_metrics
+
   flyway:
     baseline-on-migrate: true
     baseline-version: 0
+
   jpa:
     hibernate:
       ddl-auto: validate
+
   kafka:
     bootstrap-servers: localhost:9092
     producer:
