--- a/service-1/src/main/resources/application.yml
+++ b/service-1/src/main/resources/application.yml
@@ -23,3 +23,12 @@ spring:
       properties:
         retry.backoff.ms: 1000
         enable.idempotence: false
+    consumer:
+      group-id: t1_demo
+      properties:
+        session.timeout.ms: 10000
+        max.partition.fetch.bytes: 300000
+        max.poll.records: 10
+        max.poll.interval.ms: 300000
+        heartbeat.interval.ms: 3000
+
