--- a/service-2/src/main/resources/application.yml
+++ b/service-2/src/main/resources/application.yml
@@ -14,6 +14,8 @@ spring:
 
   application:
     name: t1-homeworks
+    kafka:
+      transaction-result-topic: t1_demo_transaction_result
 
   flyway:
     baseline-on-migrate: true
