--- a/service-2/src/main/resources/application.yml
+++ b/service-2/src/main/resources/application.yml
@@ -14,6 +14,10 @@ spring:
 
   application:
     name: t1-homeworks
+    limits:
+      transactions:
+        time-period-ms: 3000
+        max-transactions-in-period: 2
     kafka:
       transaction-result-topic: t1_demo_transaction_result
 
