--- a/compose.yaml
+++ b/compose.yaml
@@ -82,6 +82,26 @@ services:
     depends_on:
       - zookeeper
 
+  grafana:
+    image: grafana/grafana-enterprise
+    container_name: grafana
+    restart: unless-stopped
+    ports:
+      - '3000:3000'
+
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    volumes:
+      - ./prometheus:/etc/prometheus/
+    command:
+      - --config.file=/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+    restart: unless-stopped
+    networks:
+      - default
+
 volumes:
   service-1-postgres_data:
   service-2-postgres_data:
